fix(audit): 修复后端BLOCK/CRITICAL审核问题
Circle模块:
- circle-10: 添加CircleSecurityUtil安全工具类，匿名访问NPE防护
- circle-10: 抽取CircleBiz层，Controller逻辑下沉
- circle-10: memberCount原子更新SQL(防并发)
- circle-12: 数据统计/导出接口权限校验(圈主/版主)
- circle-12: CSV注入防护、日期参数校验、中文文件名编码
- circle-12: circle_recommend_source添加exposure_time字段
- circle-12: 修复定时任务聚合统计(成员/帖子/活跃用户)
- circle-13: 抽取CircleGrowthBiz层，添加身份认证防越权
- circle-13: 补充CONTENT_MILESTONE/SOCIAL_BUTTERFLY徽章数据
- circle-13: 测试文件包路径user/growth→circle/growth

Channel模块:
- ChannelReview表名映射修复(channel_review→content_channel_review)
- 新增ChannelSecurityUtil工具类
- 所有敏感接口(成员管理/治理/统计/导出/公告/合并/审核)添加管理员权限校验

Auth模块:
- riskLevel字段类型统一String→Integer(与SQL一致)
- ContentAuthController路径修正/api/v1/content/auth→/api/v1/auth
- 第三方登录使用@RequestBody DTO替代@RequestParam rawJson
- registerByMobile/registerByEmail返回AuthLoginResult(含token)
- 添加账号注销冷静期到期@Scheduled定时任务
- 补充测试mock(LoginTokenGeneratorPort/deviceSessionMapper)

测试: 421个Circle+Auth测试全部通过