@@ -1,4 +1,4 @@
-package org.jeecg.modules.content.user.growth.service;
+package org.jeecg.modules.content.circle.growth.service;
 
 import com.baomidou.mybatisplus.core.MybatisConfiguration;
 import com.baomidou.mybatisplus.core.metadata.TableInfoHelper;
@@ -6,7 +6,9 @@ import org.apache.ibatis.builder.MapperBuilderAssistant;
 import org.jeecg.modules.content.circle.growth.entity.CircleGrowthLog;
 import org.jeecg.modules.content.circle.growth.entity.CircleMemberGrowth;
 import org.jeecg.modules.content.circle.growth.enums.GrowthActionEnum;
+import org.jeecg.modules.content.circle.growth.mapper.CircleAchievementMapper;
 import org.jeecg.modules.content.circle.growth.mapper.CircleGrowthLogMapper;
+import org.jeecg.modules.content.circle.growth.mapper.CircleMemberAchievementMapper;
 import org.jeecg.modules.content.circle.growth.mapper.CircleMemberGrowthMapper;
 import org.jeecg.modules.content.circle.growth.service.impl.MemberGrowthServiceImpl;
 import org.junit.jupiter.api.BeforeAll;
@@ -35,6 +37,10 @@ class MemberGrowthServiceTest {
     private CircleMemberGrowthMapper growthMapper;
     @Mock
     private CircleGrowthLogMapper growthLogMapper;
+    @Mock
+    private CircleMemberAchievementMapper memberAchievementMapper;
+    @Mock
+    private CircleAchievementMapper achievementMapper;
     @InjectMocks
     private MemberGrowthServiceImpl service;
 
@@ -141,18 +147,19 @@ class MemberGrowthServiceTest {
                 .setLevel(2).setPostCount(5).setCommentCount(3).setFeaturedCount(1);
         doReturn(growth).when(growthMapper).selectOne(any(), anyBoolean());
 
-        // baseMapper.selectCount for rank: return 0 (rank = 0 + 1 = 1)
         when(growthMapper.selectCount(any())).thenReturn(0L);
 
-        // todayExp: one log with 15 exp today
         CircleGrowthLog todayLog = new CircleGrowthLog()
                 .setCircleId(CIRCLE_ID).setUserId(USER_ID)
                 .setExpPoints(15).setRevoked(false).setBizDate(LocalDate.now());
         when(growthLogMapper.selectList(any()))
-                .thenReturn(java.util.List.of(            // first call: getParticipationDays
+                .thenReturn(java.util.List.of(
                         new CircleGrowthLog().setBizDate(LocalDate.now()),
                         new CircleGrowthLog().setBizDate(LocalDate.now().minusDays(1))))
-                .thenReturn(java.util.List.of(todayLog));  // second call: todayExp
+                .thenReturn(java.util.List.of(todayLog));
+
+        when(memberAchievementMapper.selectList(any())).thenReturn(Collections.emptyList());
+        when(achievementMapper.selectCount(any())).thenReturn(0L);
 
         var vo = service.getGrowthInfo(CIRCLE_ID, USER_ID);
 
@@ -162,8 +169,6 @@ class MemberGrowthServiceTest {
         assertThat(vo.getLevel()).isEqualTo(2);
         assertThat(vo.getPostCount()).isEqualTo(5);
         assertThat(vo.getRank()).isEqualTo(1);
-        // L2: threshold = MEMBER_LEVEL_THRESHOLDS[2] = 300, current threshold = 100
-        // progress% = (150 - 100) * 100 / (300 - 100) = 25
         assertThat(vo.getNextLevelThreshold()).isEqualTo(300);
         assertThat(vo.getProgressPercent()).isEqualTo(25);
         assertThat(vo.getParticipationDays()).isEqualTo(2);
